Sreyans/y.output
Terminals unused in grammar

   T_Power


Grammar

    0 $accept: start_karo $end

    1 start_karo: T_NL start_karo
    2           | stmt start_karo
    3           | T_EOF

    4 term: T_String

    5 math_term: T_ID
    6          | T_Real
    7          | T_Integer

    8 stmt: simple_stmt
    9     | compound_stmt

   10 simple_stmt: base_stmt

   11 base_stmt: pass_stmt
   12          | delete_stmt
   13          | import_stmt
   14          | cobr_stmt
   15          | assign_stmt
   16          | print_stmt
   17          | printable_stmt

   18 pass_stmt: T_Pass

   19 delete_stmt: T_Del T_ID

   20 import_stmt: T_Import T_ID
   21            | import_from

   22 import_from: T_From T_ID T_Import T_ID end_import_from

   23 end_import_from: T_Comma T_ID end_import_from
   24                | %empty

   25 cobr_stmt: T_Break
   26          | T_Continue

   27 assign_stmt: T_ID T_EQ printable_stmt

   28 print_stmt: T_Print T_LP printable_stmt T_RP

   29 printable_stmt: arith_stmt
   30               | bool_stmt
   31               | list_stmt

   32 arith_stmt: arith_stmt T_Plus arith_stmt
   33           | arith_stmt T_Minus arith_stmt
   34           | arith_stmt T_Star arith_stmt
   35           | arith_stmt T_Divide arith_stmt
   36           | arith_stmt T_DDiv arith_stmt
   37           | arith_stmt T_Mod arith_stmt
   38           | T_LP arith_stmt T_RP
   39           | math_term

   40 bool_stmt: bool_term T_Or bool_term
   41          | bool_term T_And bool_term
   42          | bool_term
   43          | T_Not bool_stmt
   44          | T_LP bool_stmt T_RP
   45          | arith_stmt comp_op arith_stmt

   46 bool_term: term
   47          | T_True
   48          | T_False

   49 comp_op: T_Lt
   50        | T_Gt
   51        | T_Deq
   52        | T_Lte
   53        | T_Gte

   54 compound_stmt: for_stmt
   55              | while_stmt

   56 for_stmt: T_For T_ID T_In range_stmt T_Cln block_code
   57         | T_For T_ID T_In list_stmt T_Cln block_code

   58 range_stmt: T_Range T_LP T_Integer T_RP
   59           | T_Range T_LP T_ID T_RP
   60           | T_Range T_LP T_Integer T_Comma T_Integer T_RP
   61           | T_Range T_LP T_ID T_Comma T_ID T_RP
   62           | T_Range T_LP T_Integer T_Comma T_Integer T_Comma T_Integer T_RP
   63           | T_Range T_LP T_ID T_Comma T_ID T_Comma T_ID T_RP

   64 list_stmt: T_Ls T_Rs
   65          | T_Ls args T_Rs

   66 args: term items
   67     | math_term items

   68 items: T_Comma term items
   69      | T_Comma math_term items
   70      | %empty

   71 while_stmt: T_While bool_stmt T_Cln block_code

   72 block_code: base_stmt
   73           | T_NL T_IND stmt repeater T_DED

   74 repeater: %empty
   75         | stmt repeater


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NL (258) 1 73
T_IND (259) 73
T_DED (260) 73
T_EOF (261) 3
T_EQ (262) 27
T_Comma (263) 23 60 61 62 63 68 69
T_Del (264) 19
T_Pass (265) 18
T_Break (266) 25
T_Continue (267) 26
T_In (268) 56 57
T_Print (269) 28
T_Import (270) 20 22
T_From (271) 22
T_Star (272) 34
T_LP (273) 28 38 44 58 59 60 61 62 63
T_RP (274) 28 38 44 58 59 60 61 62 63
T_Cln (275) 56 57 71
T_For (276) 56 57
T_While (277) 71
T_Or (278) 40
T_Range (279) 58 59 60 61 62 63
T_And (280) 41
T_Not (281) 43
T_Lt (282) 49
T_Gt (283) 50
T_Lte (284) 52
T_Gte (285) 53
T_Deq (286) 51
T_Plus (287) 32
T_Minus (288) 33
T_Divide (289) 35
T_Mod (290) 37
T_DDiv (291) 36
T_Power (292)
T_Ls (293) 64 65
T_Rs (294) 64 65
T_True (295) 47
T_False (296) 48
T_ID (297) 5 19 20 22 23 27 56 57 59 61 63
T_Integer (298) 7 58 60 62
T_Real (299) 6
T_String (300) 4


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
start_karo (47)
    on left: 1 2 3, on right: 0 1 2
term (48)
    on left: 4, on right: 46 66 68
math_term (49)
    on left: 5 6 7, on right: 39 67 69
stmt (50)
    on left: 8 9, on right: 2 73 75
simple_stmt (51)
    on left: 10, on right: 8
base_stmt (52)
    on left: 11 12 13 14 15 16 17, on right: 10 72
pass_stmt (53)
    on left: 18, on right: 11
delete_stmt (54)
    on left: 19, on right: 12
import_stmt (55)
    on left: 20 21, on right: 13
import_from (56)
    on left: 22, on right: 21
end_import_from (57)
    on left: 23 24, on right: 22 23
cobr_stmt (58)
    on left: 25 26, on right: 14
assign_stmt (59)
    on left: 27, on right: 15
print_stmt (60)
    on left: 28, on right: 16
printable_stmt (61)
    on left: 29 30 31, on right: 17 27 28
arith_stmt (62)
    on left: 32 33 34 35 36 37 38 39, on right: 29 32 33 34 35 36 37
    38 45
bool_stmt (63)
    on left: 40 41 42 43 44 45, on right: 30 43 44 71
bool_term (64)
    on left: 46 47 48, on right: 40 41 42
comp_op (65)
    on left: 49 50 51 52 53, on right: 45
compound_stmt (66)
    on left: 54 55, on right: 9
for_stmt (67)
    on left: 56 57, on right: 54
range_stmt (68)
    on left: 58 59 60 61 62 63, on right: 56
list_stmt (69)
    on left: 64 65, on right: 31 57
args (70)
    on left: 66 67, on right: 65
items (71)
    on left: 68 69 70, on right: 66 67 68 69
while_stmt (72)
    on left: 71, on right: 55
block_code (73)
    on left: 72 73, on right: 56 57 71
repeater (74)
    on left: 74 75, on right: 73 75


State 0

    0 $accept: . start_karo $end

    T_NL        shift, and go to state 1
    T_EOF       shift, and go to state 2
    T_Del       shift, and go to state 3
    T_Pass      shift, and go to state 4
    T_Break     shift, and go to state 5
    T_Continue  shift, and go to state 6
    T_Print     shift, and go to state 7
    T_Import    shift, and go to state 8
    T_From      shift, and go to state 9
    T_LP        shift, and go to state 10
    T_For       shift, and go to state 11
    T_While     shift, and go to state 12
    T_Not       shift, and go to state 13
    T_Ls        shift, and go to state 14
    T_True      shift, and go to state 15
    T_False     shift, and go to state 16
    T_ID        shift, and go to state 17
    T_Integer   shift, and go to state 18
    T_Real      shift, and go to state 19
    T_String    shift, and go to state 20

    start_karo      go to state 21
    term            go to state 22
    math_term       go to state 23
    stmt            go to state 24
    simple_stmt     go to state 25
    base_stmt       go to state 26
    pass_stmt       go to state 27
    delete_stmt     go to state 28
    import_stmt     go to state 29
    import_from     go to state 30
    cobr_stmt       go to state 31
    assign_stmt     go to state 32
    print_stmt      go to state 33
    printable_stmt  go to state 34
    arith_stmt      go to state 35
    bool_stmt       go to state 36
    bool_term       go to state 37
    compound_stmt   go to state 38
    for_stmt        go to state 39
    list_stmt       go to state 40
    while_stmt      go to state 41


State 1

    1 start_karo: T_NL . start_karo

    T_NL        shift, and go to state 1
    T_EOF       shift, and go to state 2
    T_Del       shift, and go to state 3
    T_Pass      shift, and go to state 4
    T_Break     shift, and go to state 5
    T_Continue  shift, and go to state 6
    T_Print     shift, and go to state 7
    T_Import    shift, and go to state 8
    T_From      shift, and go to state 9
    T_LP        shift, and go to state 10
    T_For       shift, and go to state 11
    T_While     shift, and go to state 12
    T_Not       shift, and go to state 13
    T_Ls        shift, and go to state 14
    T_True      shift, and go to state 15
    T_False     shift, and go to state 16
    T_ID        shift, and go to state 17
    T_Integer   shift, and go to state 18
    T_Real      shift, and go to state 19
    T_String    shift, and go to state 20

    start_karo      go to state 42
    term            go to state 22
    math_term       go to state 23
    stmt            go to state 24
    simple_stmt     go to state 25
    base_stmt       go to state 26
    pass_stmt       go to state 27
    delete_stmt     go to state 28
    import_stmt     go to state 29
    import_from     go to state 30
    cobr_stmt       go to state 31
    assign_stmt     go to state 32
    print_stmt      go to state 33
    printable_stmt  go to state 34
    arith_stmt      go to state 35
    bool_stmt       go to state 36
    bool_term       go to state 37
    compound_stmt   go to state 38
    for_stmt        go to state 39
    list_stmt       go to state 40
    while_stmt      go to state 41


State 2

    3 start_karo: T_EOF .

    $default  reduce using rule 3 (start_karo)


State 3

   19 delete_stmt: T_Del . T_ID

    T_ID  shift, and go to state 43


State 4

   18 pass_stmt: T_Pass .

    $default  reduce using rule 18 (pass_stmt)


State 5

   25 cobr_stmt: T_Break .

    $default  reduce using rule 25 (cobr_stmt)


State 6

   26 cobr_stmt: T_Continue .

    $default  reduce using rule 26 (cobr_stmt)


State 7

   28 print_stmt: T_Print . T_LP printable_stmt T_RP

    T_LP  shift, and go to state 44


State 8

   20 import_stmt: T_Import . T_ID

    T_ID  shift, and go to state 45


State 9

   22 import_from: T_From . T_ID T_Import T_ID end_import_from

    T_ID  shift, and go to state 46


State 10

   38 arith_stmt: T_LP . arith_stmt T_RP
   44 bool_stmt: T_LP . bool_stmt T_RP

    T_LP       shift, and go to state 10
    T_Not      shift, and go to state 13
    T_True     shift, and go to state 15
    T_False    shift, and go to state 16
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term        go to state 22
    math_term   go to state 23
    arith_stmt  go to state 48
    bool_stmt   go to state 49
    bool_term   go to state 37


State 11

   56 for_stmt: T_For . T_ID T_In range_stmt T_Cln block_code
   57         | T_For . T_ID T_In list_stmt T_Cln block_code

    T_ID  shift, and go to state 50


State 12

   71 while_stmt: T_While . bool_stmt T_Cln block_code

    T_LP       shift, and go to state 10
    T_Not      shift, and go to state 13
    T_True     shift, and go to state 15
    T_False    shift, and go to state 16
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term        go to state 22
    math_term   go to state 23
    arith_stmt  go to state 51
    bool_stmt   go to state 52
    bool_term   go to state 37


State 13

   43 bool_stmt: T_Not . bool_stmt

    T_LP       shift, and go to state 10
    T_Not      shift, and go to state 13
    T_True     shift, and go to state 15
    T_False    shift, and go to state 16
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term        go to state 22
    math_term   go to state 23
    arith_stmt  go to state 51
    bool_stmt   go to state 53
    bool_term   go to state 37


State 14

   64 list_stmt: T_Ls . T_Rs
   65          | T_Ls . args T_Rs

    T_Rs       shift, and go to state 54
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term       go to state 55
    math_term  go to state 56
    args       go to state 57


State 15

   47 bool_term: T_True .

    $default  reduce using rule 47 (bool_term)


State 16

   48 bool_term: T_False .

    $default  reduce using rule 48 (bool_term)


State 17

    5 math_term: T_ID .
   27 assign_stmt: T_ID . T_EQ printable_stmt

    T_EQ  shift, and go to state 58

    $default  reduce using rule 5 (math_term)


State 18

    7 math_term: T_Integer .

    $default  reduce using rule 7 (math_term)


State 19

    6 math_term: T_Real .

    $default  reduce using rule 6 (math_term)


State 20

    4 term: T_String .

    $default  reduce using rule 4 (term)


State 21

    0 $accept: start_karo . $end

    $end  shift, and go to state 59


State 22

   46 bool_term: term .

    $default  reduce using rule 46 (bool_term)


State 23

   39 arith_stmt: math_term .

    $default  reduce using rule 39 (arith_stmt)


State 24

    2 start_karo: stmt . start_karo

    T_NL        shift, and go to state 1
    T_EOF       shift, and go to state 2
    T_Del       shift, and go to state 3
    T_Pass      shift, and go to state 4
    T_Break     shift, and go to state 5
    T_Continue  shift, and go to state 6
    T_Print     shift, and go to state 7
    T_Import    shift, and go to state 8
    T_From      shift, and go to state 9
    T_LP        shift, and go to state 10
    T_For       shift, and go to state 11
    T_While     shift, and go to state 12
    T_Not       shift, and go to state 13
    T_Ls        shift, and go to state 14
    T_True      shift, and go to state 15
    T_False     shift, and go to state 16
    T_ID        shift, and go to state 17
    T_Integer   shift, and go to state 18
    T_Real      shift, and go to state 19
    T_String    shift, and go to state 20

    start_karo      go to state 60
    term            go to state 22
    math_term       go to state 23
    stmt            go to state 24
    simple_stmt     go to state 25
    base_stmt       go to state 26
    pass_stmt       go to state 27
    delete_stmt     go to state 28
    import_stmt     go to state 29
    import_from     go to state 30
    cobr_stmt       go to state 31
    assign_stmt     go to state 32
    print_stmt      go to state 33
    printable_stmt  go to state 34
    arith_stmt      go to state 35
    bool_stmt       go to state 36
    bool_term       go to state 37
    compound_stmt   go to state 38
    for_stmt        go to state 39
    list_stmt       go to state 40
    while_stmt      go to state 41


State 25

    8 stmt: simple_stmt .

    $default  reduce using rule 8 (stmt)


State 26

   10 simple_stmt: base_stmt .

    $default  reduce using rule 10 (simple_stmt)


State 27

   11 base_stmt: pass_stmt .

    $default  reduce using rule 11 (base_stmt)


State 28

   12 base_stmt: delete_stmt .

    $default  reduce using rule 12 (base_stmt)


State 29

   13 base_stmt: import_stmt .

    $default  reduce using rule 13 (base_stmt)


State 30

   21 import_stmt: import_from .

    $default  reduce using rule 21 (import_stmt)


State 31

   14 base_stmt: cobr_stmt .

    $default  reduce using rule 14 (base_stmt)


State 32

   15 base_stmt: assign_stmt .

    $default  reduce using rule 15 (base_stmt)


State 33

   16 base_stmt: print_stmt .

    $default  reduce using rule 16 (base_stmt)


State 34

   17 base_stmt: printable_stmt .

    $default  reduce using rule 17 (base_stmt)


State 35

   29 printable_stmt: arith_stmt .
   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   45 bool_stmt: arith_stmt . comp_op arith_stmt

    T_Star    shift, and go to state 61
    T_Lt      shift, and go to state 62
    T_Gt      shift, and go to state 63
    T_Lte     shift, and go to state 64
    T_Gte     shift, and go to state 65
    T_Deq     shift, and go to state 66
    T_Plus    shift, and go to state 67
    T_Minus   shift, and go to state 68
    T_Divide  shift, and go to state 69
    T_Mod     shift, and go to state 70
    T_DDiv    shift, and go to state 71

    $default  reduce using rule 29 (printable_stmt)

    comp_op  go to state 72


State 36

   30 printable_stmt: bool_stmt .

    $default  reduce using rule 30 (printable_stmt)


State 37

   40 bool_stmt: bool_term . T_Or bool_term
   41          | bool_term . T_And bool_term
   42          | bool_term .

    T_Or   shift, and go to state 73
    T_And  shift, and go to state 74

    $default  reduce using rule 42 (bool_stmt)


State 38

    9 stmt: compound_stmt .

    $default  reduce using rule 9 (stmt)


State 39

   54 compound_stmt: for_stmt .

    $default  reduce using rule 54 (compound_stmt)


State 40

   31 printable_stmt: list_stmt .

    $default  reduce using rule 31 (printable_stmt)


State 41

   55 compound_stmt: while_stmt .

    $default  reduce using rule 55 (compound_stmt)


State 42

    1 start_karo: T_NL start_karo .

    $default  reduce using rule 1 (start_karo)


State 43

   19 delete_stmt: T_Del T_ID .

    $default  reduce using rule 19 (delete_stmt)


State 44

   28 print_stmt: T_Print T_LP . printable_stmt T_RP

    T_LP       shift, and go to state 10
    T_Not      shift, and go to state 13
    T_Ls       shift, and go to state 14
    T_True     shift, and go to state 15
    T_False    shift, and go to state 16
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term            go to state 22
    math_term       go to state 23
    printable_stmt  go to state 75
    arith_stmt      go to state 35
    bool_stmt       go to state 36
    bool_term       go to state 37
    list_stmt       go to state 40


State 45

   20 import_stmt: T_Import T_ID .

    $default  reduce using rule 20 (import_stmt)


State 46

   22 import_from: T_From T_ID . T_Import T_ID end_import_from

    T_Import  shift, and go to state 76


State 47

    5 math_term: T_ID .

    $default  reduce using rule 5 (math_term)


State 48

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   38           | T_LP arith_stmt . T_RP
   45 bool_stmt: arith_stmt . comp_op arith_stmt

    T_Star    shift, and go to state 61
    T_RP      shift, and go to state 77
    T_Lt      shift, and go to state 62
    T_Gt      shift, and go to state 63
    T_Lte     shift, and go to state 64
    T_Gte     shift, and go to state 65
    T_Deq     shift, and go to state 66
    T_Plus    shift, and go to state 67
    T_Minus   shift, and go to state 68
    T_Divide  shift, and go to state 69
    T_Mod     shift, and go to state 70
    T_DDiv    shift, and go to state 71

    comp_op  go to state 72


State 49

   44 bool_stmt: T_LP bool_stmt . T_RP

    T_RP  shift, and go to state 78


State 50

   56 for_stmt: T_For T_ID . T_In range_stmt T_Cln block_code
   57         | T_For T_ID . T_In list_stmt T_Cln block_code

    T_In  shift, and go to state 79


State 51

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt
   45 bool_stmt: arith_stmt . comp_op arith_stmt

    T_Star    shift, and go to state 61
    T_Lt      shift, and go to state 62
    T_Gt      shift, and go to state 63
    T_Lte     shift, and go to state 64
    T_Gte     shift, and go to state 65
    T_Deq     shift, and go to state 66
    T_Plus    shift, and go to state 67
    T_Minus   shift, and go to state 68
    T_Divide  shift, and go to state 69
    T_Mod     shift, and go to state 70
    T_DDiv    shift, and go to state 71

    comp_op  go to state 72


State 52

   71 while_stmt: T_While bool_stmt . T_Cln block_code

    T_Cln  shift, and go to state 80


State 53

   43 bool_stmt: T_Not bool_stmt .

    $default  reduce using rule 43 (bool_stmt)


State 54

   64 list_stmt: T_Ls T_Rs .

    $default  reduce using rule 64 (list_stmt)


State 55

   66 args: term . items

    T_Comma  shift, and go to state 81

    $default  reduce using rule 70 (items)

    items  go to state 82


State 56

   67 args: math_term . items

    T_Comma  shift, and go to state 81

    $default  reduce using rule 70 (items)

    items  go to state 83


State 57

   65 list_stmt: T_Ls args . T_Rs

    T_Rs  shift, and go to state 84


State 58

   27 assign_stmt: T_ID T_EQ . printable_stmt

    T_LP       shift, and go to state 10
    T_Not      shift, and go to state 13
    T_Ls       shift, and go to state 14
    T_True     shift, and go to state 15
    T_False    shift, and go to state 16
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term            go to state 22
    math_term       go to state 23
    printable_stmt  go to state 85
    arith_stmt      go to state 35
    bool_stmt       go to state 36
    bool_term       go to state 37
    list_stmt       go to state 40


State 59

    0 $accept: start_karo $end .

    $default  accept


State 60

    2 start_karo: stmt start_karo .

    $default  reduce using rule 2 (start_karo)


State 61

   34 arith_stmt: arith_stmt T_Star . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 87


State 62

   49 comp_op: T_Lt .

    $default  reduce using rule 49 (comp_op)


State 63

   50 comp_op: T_Gt .

    $default  reduce using rule 50 (comp_op)


State 64

   52 comp_op: T_Lte .

    $default  reduce using rule 52 (comp_op)


State 65

   53 comp_op: T_Gte .

    $default  reduce using rule 53 (comp_op)


State 66

   51 comp_op: T_Deq .

    $default  reduce using rule 51 (comp_op)


State 67

   32 arith_stmt: arith_stmt T_Plus . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 88


State 68

   33 arith_stmt: arith_stmt T_Minus . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 89


State 69

   35 arith_stmt: arith_stmt T_Divide . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 90


State 70

   37 arith_stmt: arith_stmt T_Mod . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 91


State 71

   36 arith_stmt: arith_stmt T_DDiv . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 92


State 72

   45 bool_stmt: arith_stmt comp_op . arith_stmt

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 93


State 73

   40 bool_stmt: bool_term T_Or . bool_term

    T_True    shift, and go to state 15
    T_False   shift, and go to state 16
    T_String  shift, and go to state 20

    term       go to state 22
    bool_term  go to state 94


State 74

   41 bool_stmt: bool_term T_And . bool_term

    T_True    shift, and go to state 15
    T_False   shift, and go to state 16
    T_String  shift, and go to state 20

    term       go to state 22
    bool_term  go to state 95


State 75

   28 print_stmt: T_Print T_LP printable_stmt . T_RP

    T_RP  shift, and go to state 96


State 76

   22 import_from: T_From T_ID T_Import . T_ID end_import_from

    T_ID  shift, and go to state 97


State 77

   38 arith_stmt: T_LP arith_stmt T_RP .

    $default  reduce using rule 38 (arith_stmt)


State 78

   44 bool_stmt: T_LP bool_stmt T_RP .

    $default  reduce using rule 44 (bool_stmt)


State 79

   56 for_stmt: T_For T_ID T_In . range_stmt T_Cln block_code
   57         | T_For T_ID T_In . list_stmt T_Cln block_code

    T_Range  shift, and go to state 98
    T_Ls     shift, and go to state 14

    range_stmt  go to state 99
    list_stmt   go to state 100


State 80

   71 while_stmt: T_While bool_stmt T_Cln . block_code

    T_NL        shift, and go to state 101
    T_Del       shift, and go to state 3
    T_Pass      shift, and go to state 4
    T_Break     shift, and go to state 5
    T_Continue  shift, and go to state 6
    T_Print     shift, and go to state 7
    T_Import    shift, and go to state 8
    T_From      shift, and go to state 9
    T_LP        shift, and go to state 10
    T_Not       shift, and go to state 13
    T_Ls        shift, and go to state 14
    T_True      shift, and go to state 15
    T_False     shift, and go to state 16
    T_ID        shift, and go to state 17
    T_Integer   shift, and go to state 18
    T_Real      shift, and go to state 19
    T_String    shift, and go to state 20

    term            go to state 22
    math_term       go to state 23
    base_stmt       go to state 102
    pass_stmt       go to state 27
    delete_stmt     go to state 28
    import_stmt     go to state 29
    import_from     go to state 30
    cobr_stmt       go to state 31
    assign_stmt     go to state 32
    print_stmt      go to state 33
    printable_stmt  go to state 34
    arith_stmt      go to state 35
    bool_stmt       go to state 36
    bool_term       go to state 37
    list_stmt       go to state 40
    block_code      go to state 103


State 81

   68 items: T_Comma . term items
   69      | T_Comma . math_term items

    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19
    T_String   shift, and go to state 20

    term       go to state 104
    math_term  go to state 105


State 82

   66 args: term items .

    $default  reduce using rule 66 (args)


State 83

   67 args: math_term items .

    $default  reduce using rule 67 (args)


State 84

   65 list_stmt: T_Ls args T_Rs .

    $default  reduce using rule 65 (list_stmt)


State 85

   27 assign_stmt: T_ID T_EQ printable_stmt .

    $default  reduce using rule 27 (assign_stmt)


State 86

   38 arith_stmt: T_LP . arith_stmt T_RP

    T_LP       shift, and go to state 86
    T_ID       shift, and go to state 47
    T_Integer  shift, and go to state 18
    T_Real     shift, and go to state 19

    math_term   go to state 23
    arith_stmt  go to state 106


State 87

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   34           | arith_stmt T_Star arith_stmt .
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    $default  reduce using rule 34 (arith_stmt)


State 88

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   32           | arith_stmt T_Plus arith_stmt .
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    T_Star    shift, and go to state 61
    T_Divide  shift, and go to state 69
    T_Mod     shift, and go to state 70
    T_DDiv    shift, and go to state 71

    $default  reduce using rule 32 (arith_stmt)


State 89

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   33           | arith_stmt T_Minus arith_stmt .
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    T_Star    shift, and go to state 61
    T_Divide  shift, and go to state 69
    T_Mod     shift, and go to state 70
    T_DDiv    shift, and go to state 71

    $default  reduce using rule 33 (arith_stmt)


State 90

   32 arith_stmt: arith_stmt . T_Plus arith_stmt
   33           | arith_stmt . T_Minus arith_stmt
   34           | arith_stmt . T_Star arith_stmt
   35           | arith_stmt . T_Divide arith_stmt
   35           | arith_stmt T_Divide arith_stmt .
   36           | arith_stmt . T_DDiv arith_stmt
   37           | arith_stmt . T_Mod arith_stmt

    $default  reduce using rule 35 (arith_stmt)

